--- a/src/app/components/general/stop-map/stop-map.component.html
+++ b/src/app/components/general/stop-map/stop-map.component.html
@@ -3,6 +3,6 @@
       *ngFor="let busStopMarker of busStopMarkers"
       [busStop]="busStopMarker"
       [showIcon]="showStops"
-      (stopClick)="emitSelectedStop($event)">
+      (stopClick)="handleSelectedStop($event)">
   </app-bus-stop>
 </div>
