--- a/src/app/components/home-page/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page/home-page.component.html
@@ -1,2 +1,3 @@
+<app-user-icon [iconUrl]="'/src/assets/images/logo.png'"></app-user-icon>
 <app-home-stop-map></app-home-stop-map>
 <app-search></app-search>
