--- a/src/app/components/init-page/init-home/init-home.component.sass
+++ b/src/app/components/init-page/init-home/init-home.component.sass
@@ -19,7 +19,7 @@
   margin-top: 0.9rem
 
 .bb-faq-footer
-  background-color: rgb(255,255,255, 80%)//linear-gradient(.5turn, rgb(255,255,255, 100%), )
+  background-color: rgb(255,255,255, 80%)
   width: 100%
 
   position: absolute
