--- a/src/app/components/init-page/init-page/init-page.component.sass
+++ b/src/app/components/init-page/init-page/init-page.component.sass
@@ -1,3 +1,12 @@
 .bb-init-content
-  margin-left: 1.6rem
-  margin-right: 1.6rem
+  width: calc(100% - 3.2rem)
+  max-width: 500px
+  display: block
+  margin-left: auto
+  margin-right: auto
+
+.bb-logo-image
+  display: block
+  margin-left: auto
+  margin-right: auto
+  width: fit-content
