added sliding sheet

--- a/src/app/components/general/search/search-form/search-form.component.html
+++ b/src/app/components/general/search/search-form/search-form.component.html
@@ -1,4 +1,5 @@
-<form class="bb-search-form" [formGroup]="searchService.searchForm">
+<form class="bb-search-form overflow-scroll" [formGroup]="searchService.searchForm">
+  <p class="bb-text-green bb-search-label">Search</p>
   <mat-form-field class="bb-search-form-field"
     appearance="outline"
     color="primary">
@@ -19,7 +20,7 @@
     mat-raised-button
     class="bb-search-form-btn bb-bond-btn"
     color="primary"
-    (click)="handleBondClick()">
+    (click)="handleBondClick($event)">
     BOND
   </button>
 </form>
