--- a/src/app/components/general/search/search-form/search-form.component.sass
+++ b/src/app/components/general/search/search-form/search-form.component.sass
@@ -2,9 +2,11 @@
 @use '../search.component'
 
 .bb-search-form
+  width: 100%
+  height: 100%
   text-align: center
-  padding-top: 1.6rem
-  padding-bottom: 1.6rem
+  padding-top: 1rem
+  padding-bottom: 1rem
 
 .bb-search-form-field
   font-family: 'Montserrat'
@@ -13,3 +15,8 @@
 .bb-bond-btn
   font-weight: bold
   margin-top: 1.25rem
+
+.bb-search-label
+  font-family: 'Montserrat'
+  font-size: 1rem
+  font-weight: lighter
