sigue igual de feo

--- a/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.html
+++ b/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.html
@@ -6,7 +6,7 @@
         </button>
       </a>
       <div>
-        <span>Chat name</span>
+        <span class="bb-title">{{title}}</span>
       </div>
       <button mat-icon-button *ngIf="showIcons">
         <mat-icon>more_vert</mat-icon>
