--- a/src/app/components/chats-section/chats-view/chats-view.component.html
+++ b/src/app/components/chats-section/chats-view/chats-view.component.html
@@ -1,5 +1,5 @@
 <app-chat-feed-header [title]="'Temporal chats'" [showIcons]="false"></app-chat-feed-header>
-<app-chats-list></app-chats-list>
-<app-chat-feed-header [title]="'Temporal chats'" [showIcons]="false"></app-chat-feed-header>
-<app-chats-list></app-chats-list>
+    <app-chats-list [chats]="temporalChats"></app-chats-list>
+<app-chat-feed-header [title]="'Friends chats'" [showIcons]="false"></app-chat-feed-header>
+    <app-chats-list [chats]="friendsChats"></app-chats-list>
 <!--navbar-->
