finished user item group

--- a/src/app/components/home-page/home-stop-map/home-stop-map.component.html
+++ b/src/app/components/home-page/home-stop-map/home-stop-map.component.html
@@ -4,3 +4,6 @@
     [busStopMarkers]="busStops"
 >
 </app-stop-map>
+<app-sliding-sheet #slidingSheet>
+  <app-user-stop-item-group [trips]="trips"></app-user-stop-item-group>
+</app-sliding-sheet>
