--- a/src/app/components/general/user/user-icon/user-icon.component.html
+++ b/src/app/components/general/user/user-icon/user-icon.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="iconUrl">
-  <img src="{{iconUrl}}">
+<div class="bb-rounded-icon-wrapper" *ngIf="iconUrl">
+  <img class="bb-user-icon w-100 h-100" src="{{iconUrl}}">
 </div>
