--- a/src/app/components/chat-page/chat-feed-input/chat-feed-input.component.html
+++ b/src/app/components/chat-page/chat-feed-input/chat-feed-input.component.html
@@ -1,6 +1,6 @@
 <div class="bb-chat-feed-footer">
-    <input type="text" class="bb-chat-text-input" placeholder=" Tpye something...">
-    <button mat-button color="primary">
+    <input type="text" class="bb-chat-text-input" placeholder=" Tpye something..." #messageInput>
+    <button mat-button color="primary" (submit)="submitChat(messageInput.value)">
         <mat-icon>send</mat-icon>
     </button>
 </div>
