a few more changes

--- a/src/app/components/chat-page/chat-view/chat-view.component.html
+++ b/src/app/components/chat-page/chat-view/chat-view.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="app-chat-feed-header">
-        <app-chat-feed-header></app-chat-feed-header>
+        <app-chat-feed-header [title]="'JoyBot'"></app-chat-feed-header>
     </div>
 
     <section>
