--- a/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.html
+++ b/src/app/components/chat-page/chat-feed-header/chat-feed-header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="bb-chat-feed-header">
+<mat-toolbar class="bb-chat-feed-header" color="primary">
     <mat-toolbar-row class="bb-feed-header">
       <a routerLink="/chat" *ngIf="showIcons">
         <button mat-icon-button>
@@ -19,6 +19,10 @@
         <button mat-menu-item (click)="openDeleteDialog()">
           <mat-icon>delete</mat-icon>
           <span>Delete chat</span>
+        </button>
+        <button mat-menu-item (click)="openSnackBarPermanentRequest()">
+          <mat-icon>sentiment_satisfied_alt</mat-icon>
+          <span>Make chat permanent</span>
         </button>
       </mat-menu>
     </mat-toolbar-row>
