--- a/src/app/components/general/search/search-form/search-form.component.html
+++ b/src/app/components/general/search/search-form/search-form.component.html
@@ -1,4 +1,4 @@
-<form class="bb-search-form overflow-scroll" [formGroup]="searchService.searchForm">
+<form class="bb-search-form" [formGroup]="searchService.searchForm">
   <p class="bb-text-green bb-search-label">Search</p>
   <mat-form-field class="bb-search-form-field"
     appearance="outline"
