--- a/src/app/components/general/sliding-sheet/sliding-sheet.component.html
+++ b/src/app/components/general/sliding-sheet/sliding-sheet.component.html
@@ -1,3 +1,3 @@
-<section #slidingSection class="bb-sliding-section {{slideClass}}">
+<section #slidingSection class="bb-sliding-section overflow-auto {{slideClass}}">
   <ng-content></ng-content>
 </section>
