--- a/src/app/components/home-page/stop-content-header/stop-content-header.component.html
+++ b/src/app/components/home-page/stop-content-header/stop-content-header.component.html
@@ -1,14 +1,14 @@
-<header class="container my-3 px-3 w-100 bb-stop-header">
+<header class="mt-3 px-4 w-100 bb-stop-header">
   <div class="row">
-    <div class="col">
-      <span *ngIf="selectedLine">{{selectedLine.line}}: {{selectedLine.destination}}</span>
-      <div *ngIf="!selectedLine">
-        <!--  <mat-form-field>
-          COMBOBOX QUE PERMITE ELEGIR LINEA DE LAS QUE HAY ACÁ
-        </mat-form-field> -->
-      </div>
+    <div class="col-7">
+      <mat-form-field class="bb-line-select-field w-100" appearance="fill" color="primary">
+        <mat-label>Line</mat-label>
+        <mat-select #lineSelect (selectionChange)="handleLineSelect($event)">
+          <mat-option *ngFor="let line of busLines" [value]="line">{{line.line}}: {{line.destination}}</mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
-    <div class="col d-flex justify-content-end bb-stop-header-time">
+    <div class="col-5 d-flex justify-content-end bb-stop-header-time">
       <span>{{clickedTime}}</span>
       <mat-icon class="ms-2" color="primary">schedule</mat-icon>
     </div>
