--- a/src/app/components/home-page/stop-content-header/stop-content-header.component.sass
+++ b/src/app/components/home-page/stop-content-header/stop-content-header.component.sass
@@ -1,8 +1,12 @@
-.bb-stop-header-time
-
+.bb-line-select-field
+  font-size: 1rem
 
 .bb-stop-header
-    font-weight: bold
-    font-family: "DM Sans"
-    font-size: 1.3rem
-    color: black
+  font-weight: bold
+  font-family: "DM Sans"
+  font-size: 1.3rem
+  color: black
+
+.bb-stop-header-time
+  font-size: 1.5rem
+  margin-top: 1.4rem
