Base home page done, missing create trip

--- a/src/app/components/general/stop-map/user-stop-item-group/user-stop-item-group.component.html
+++ b/src/app/components/general/stop-map/user-stop-item-group/user-stop-item-group.component.html
@@ -3,7 +3,7 @@
     <app-user-stop-item
       [trip]="trip"
       [selectedTripId]="selectedTrip?.tripId"
-      (selectedUser)="handleSelectedUser($event)"
+      (selectedTrip)="handleSelectedTrip($event)"
     ></app-user-stop-item>
   </li>
 </ul>
