--- a/src/app/components/general/stop-map/stop-map/stop-map.component.html
+++ b/src/app/components/general/stop-map/stop-map/stop-map.component.html
@@ -7,5 +7,5 @@
     *ngFor="let busStop of busStops"
     [busStop]="busStop"
     [showIcon]="showStops"
-    (stopClick)="handleSelectedStop($event)">
+    (stopClick)="setSelectedStop($event)">
 </app-bus-stop>
