started working on create trip form

--- a/src/app/components/general/search/search-button/search-button.component.sass
+++ b/src/app/components/general/search/search-button/search-button.component.sass
@@ -1,10 +1,4 @@
-.bb-search-icon
-  width: 2rem
-  height: 2rem
-  font-size: 2rem
-  line-height: 1.5rem
+@use '../../../../../styles'
 
-.bb-search-btn
-  position: fixed
-  right: 2.5rem
-  bottom: 8rem
+.bb-home-btn
+  bottom: 13rem
