--- a/src/app/components/general/create-trip/create-trip-filters-modal/create-trip-filters-modal.component.html
+++ b/src/app/components/general/create-trip/create-trip-filters-modal/create-trip-filters-modal.component.html
@@ -1,7 +1,7 @@
 <button
   type="button"
   mat-stroked-button
-  class="bb-search-form-btn bb-filters-btn"
+  class="bb-create-trip-form-btn bb-filter-btn"
   (click)="openFiltersDialog()">
     FILTERS
 </button>
