--- a/src/styles.sass
+++ b/src/styles.sass
@@ -47,3 +47,22 @@ $bb-primary-dark-green: #357a00
   width: 100%
   height: 100%
 
+.bb-home-btn
+  position: fixed
+  right: 2.5rem
+
+  border-radius: 50%
+
+  transition: all 0.3s ease-out
+
+  &.bb-hide-home-btn
+    transform: translateX(200%)
+
+.bb-home-btn-icon
+  width: 2rem
+  height: 2rem
+  font-size: 2rem
+  line-height: 1.5rem
+
+.bb-filters-btn
+  color: $bb-primary-green
