--- a/src/app/components/general/sliding-sheet/sliding-sheet.component.sass
+++ b/src/app/components/general/sliding-sheet/sliding-sheet.component.sass
@@ -33,8 +33,8 @@
     top: 0
 
     height: 100%
-    min-width: 30%
-    max-width: 40%
+    min-width: 30vw
+    max-width: 40vw
 
     animation-duration: 0.4s
 
