fixed some style issues and made progress

--- a/src/app/components/general/create-trip/create-trip-filters-modal/create-trip-filters-modal.component.html
+++ b/src/app/components/general/create-trip/create-trip-filters-modal/create-trip-filters-modal.component.html
@@ -1,7 +1,7 @@
 <button
   type="button"
   mat-stroked-button
-  class="bb-create-trip-form-btn bb-filter-btn"
+  class="bb-btn bb-create-trip-form-btn bb-text-green"
   (click)="openFiltersDialog()">
     FILTERS
 </button>
