--- a/src/app/components/general/create-trip/create-trip-form/create-trip-form.component.html
+++ b/src/app/components/general/create-trip/create-trip-form/create-trip-form.component.html
@@ -18,7 +18,7 @@
 
   <button
     mat-raised-button
-    class="bb-create-trip-form-btn bb-create-btn"
+    class="bb-btn bb-create-trip-form-btn bb-create-btn"
     color="primary"
     (click)="handleTripCreate()">
     CREATE
