--- a/src/app/components/general/search/search-filters-modal/search-filters-modal.component.html
+++ b/src/app/components/general/search/search-filters-modal/search-filters-modal.component.html
@@ -1,7 +1,7 @@
 <button
   type="button"
   mat-stroked-button
-  class="bb-search-form-btn bb-filters-btn"
+  class="bb-btn bb-search-form-btn bb-filters-btn"
   (click)="openFiltersDialog()">
     FILTERS
 </button>
