--- a/src/app/components/general/search/search-result-content/search-result-content.component.sass
+++ b/src/app/components/general/search/search-result-content/search-result-content.component.sass
@@ -1,3 +1,4 @@
+// MOBILE
 @media ( max-width: 700px )
   .bb-search-result-content
     max-height: 60vh
@@ -7,11 +8,16 @@
     max-height: 35vh
     overflow: scroll
 
+// DESKTOP
+@media ( min-width: 700px )
+  .bb-stop-users
+    max-height: calc(100vh - 10rem)
+    overflow-y: scroll
+
 .bb-start-chat-btn
   height: 4rem
   width: 90%
 
-  font-family: 'Montserrat'
   font-size: 1rem
 
   display: block
