--- a/src/app/components/init-page/init-home/init-home.component.html
+++ b/src/app/components/init-page/init-home/init-home.component.html
@@ -3,12 +3,12 @@
     BONDI BONDING
   </p>
   <a routerLink="/init/login">
-      <button mat-raised-button class="bb-login-btn" color="primary">
+      <button mat-raised-button class="bb-btn bb-login-btn" color="primary">
         Log in
       </button>
   </a>
 
-  <a class="bb-link-text" routerLink="/init/signup">
+  <a class="bb-link-text" routerLink="/signup">
       <p class="bb-signup-text">or create an account</p>
   </a>
 
