--- a/src/app/components/init-page/login-form/login-form.component.html
+++ b/src/app/components/init-page/login-form/login-form.component.html
@@ -39,7 +39,7 @@
 
     <div class="bb-flex-center bb-submit-button-margin">
       <div class="bb-w-100">
-        <button mat-raised-button class="bb-init-submit-button" color="primary">LOG IN</button>
+        <button mat-raised-button class="bb-btn bb-init-submit-button" color="primary">LOG IN</button>
         <p class="bb-login-forgot-password-text">
           <a class="bb-link-text"
             routerLink="/init/resetPassword"
