--- a/src/app/components/init-page/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/init-page/reset-password-form/reset-password-form.component.html
@@ -33,12 +33,12 @@
   <div class="bb-flex-center bb-submit-button-margin">
     <div class="bb-w-100">
       <button mat-raised-button *ngIf="recoveryCodeControl.disabled"
-        class="bb-init-submit-button"
+        class="bb-btn bb-init-submit-button"
         color="primary"
       >SEND RECOVERY CODE</button>
 
       <button mat-raised-button *ngIf="!recoveryCodeControl.disabled"
-        class="bb-init-submit-button"
+        class="bb-btn bb-init-submit-button"
         color="primary"
       >RESET PASSWORD</button>
     </div>
