--- a/src/app/components/init-page/update-password-form/update-password-form.component.html
+++ b/src/app/components/init-page/update-password-form/update-password-form.component.html
@@ -22,7 +22,7 @@
 
   <div class="bb-flex-center bb-submit-button-margin">
     <div class="bb-w-100">
-      <button mat-raised-button class="bb-init-submit-button" color="primary">
+      <button mat-raised-button class="bb-btn bb-init-submit-button" color="primary">
         UPDATE PASSWORD
       </button>
     </div>
