--- a/src/app/components/home-page/stop-content/stop-content.component.html
+++ b/src/app/components/home-page/stop-content/stop-content.component.html
@@ -4,7 +4,7 @@
     <app-user-stop-item-group #userItemGroup [trips]="trips"></app-user-stop-item-group>
   </div>
   <button
-    class="bb-start-chat-btn"
+    class="bb-btn bb-start-chat-btn"
     [disabled]="!userItemGroup.selectedTrip"
     mat-raised-button color="primary"
     (click)="handleStartChat(userItemGroup.selectedTrip!)">
