--- a/src/app/components/home-page/stop-content/stop-content.component.sass
+++ b/src/app/components/home-page/stop-content/stop-content.component.sass
@@ -7,11 +7,16 @@
     max-height: 35vh
     overflow: scroll
 
+// DESKTOP
+@media ( min-width: 700px )
+  .bb-stop-users
+    max-height: calc(100vh - 12rem)
+    overflow-y: scroll
+
 .bb-start-chat-btn
   height: 4rem
   width: 90%
 
-  font-family: 'Montserrat'
   font-size: 1rem
 
   display: block
