--- a/src/styles.sass
+++ b/src/styles.sass
@@ -43,6 +43,10 @@ $bb-primary-dark-green: #357a00
 .bb-btn
   font-family: 'Montserrat'
 
+  &:hover
+    filter: brightness(90%)
+    transition: filter ease 0.4s
+
 .bb-grid-form-field
   width: 100%
   height: 100%
@@ -53,7 +57,7 @@ $bb-primary-dark-green: #357a00
 
   border-radius: 50%
 
-  transition: all 0.3s ease-out
+  transition: transform 0.3s ease-out
 
   &.bb-hide-home-btn
     transform: translateX(200%)
