Improved sliding sheet display to use cdk-overlay

--- a/src/app/components/general/filters-modal-content/filters-modal-content.component.html
+++ b/src/app/components/general/filters-modal-content/filters-modal-content.component.html
@@ -16,6 +16,6 @@
           mat-raised-button
           color="primary"
           (click)="handleSaveFilters()">
-          SAVE FILTERS
+          SAVE
   </button>
 </mat-dialog-actions>
