added sheetHide event and handlers

--- a/src/app/components/home-page/home-stop-map/home-stop-map.component.html
+++ b/src/app/components/home-page/home-stop-map/home-stop-map.component.html
@@ -6,7 +6,7 @@
 >
 </app-stop-map>
 
-<app-sliding-sheet #slidingSheet>
+<app-sliding-sheet #slidingSheet (sheetHide)="handleSheetHide()">
   <app-stop-content *ngIf="!searchResult" #stopContent [stop]="selectedStop"></app-stop-content>
   <app-search-result-content
       *ngIf="searchResult"
