--- a/src/app/components/general/search/search-result-content/search-result-content.component.html
+++ b/src/app/components/general/search/search-result-content/search-result-content.component.html
@@ -9,7 +9,7 @@
     </app-stop-content-header>
   </div>
 
-  <div class="bb-stop-users">
+  <div class="bb-stop-users overflow-auto">
     <app-user-stop-item-group
         #userItemGroup
         [trips]="searchResult.trips!"
