--- a/src/styles.sass
+++ b/src/styles.sass
@@ -41,11 +41,11 @@ $bb-primary-dark-green: #357a00
     text-decoration: none
 
 .bb-btn
-  font-family: 'Montserrat'
+  font-family: 'Montserrat' !important
 
   &:hover
     filter: brightness(90%)
-    transition: filter ease 0.4s
+    transition: filter ease 0.2s
 
 .bb-grid-form-field
   width: 100%
