faq with routing

--- a/src/app/components/faq-page/faq-page/faq-page.component.html
+++ b/src/app/components/faq-page/faq-page/faq-page.component.html
@@ -1,15 +1,16 @@
 <header class="bb-faq-header">
-    <a class="bb-link-text" routerLink="/init">
-        <mat-icon class="bb-faq-icon" color="primary">expand_less</mat-icon>
         <div class="bb-title">
             FAQs
         </div>
-        </a>
 </header>
 
 <section class="bb-faq-section">
     <app-faq-accordion></app-faq-accordion>
 </section>
+
+<button mat-fab color="primary">
+    <mat-icon>arrow_back</mat-icon>
+</button>
 
 <footer class="bb-footer">
     <span>Bondi Bonding&TRADE; 2022</span>
