--- a/src/app/components/faq-page/faq-page/faq-page.component.html
+++ b/src/app/components/faq-page/faq-page/faq-page.component.html
@@ -8,9 +8,13 @@
     <app-faq-accordion></app-faq-accordion>
 </section>
 
-<button mat-fab color="primary">
-    <mat-icon>arrow_back</mat-icon>
-</button>
+<div class="bb-button">
+    <a routerLink="/init">
+        <button mat-fab color="primary">
+            <mat-icon>arrow_back</mat-icon>
+        </button>
+    </a>
+</div>
 
 <footer class="bb-footer">
     <span>Bondi Bonding&TRADE; 2022</span>
