likes filter is working

--- a/src/app/components/general/trip-filters-form/trip-filters-form.component.html
+++ b/src/app/components/general/trip-filters-form/trip-filters-form.component.html
@@ -43,6 +43,7 @@
           </mat-chip>
           <input matInput>
         </mat-chip-list>
+        <mat-hint align="end"> {{filterForm.controls.likes.value.length}}/ 3</mat-hint>
       </mat-form-field>
 
       </div>
