fixed signup components, missing responsiveness

--- a/src/app/components/signup-frame/signup-forms/signup-forms.component.sass
+++ b/src/app/components/signup-frame/signup-forms/signup-forms.component.sass
@@ -1,37 +1,5 @@
 .mat-form-field
     width: 100%
 
-.two-col
-    display: flex
-
-.left
-    width: 50%
-
-.right
-    width: 50%
-
-//input outline color
-::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline
-  color: black !important
-  opacity: 40% !important
-
-//outline color focused
-::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick
-  color: #419400 !important
-
-//input label color
-::ng-deep .mat-form-field-label
-  color: #419400 !important
-
-input[type="date"]::-webkit-calendar-picker-indicator
-    display: none
-    -webkit-appearance: none
-
-::ng-deep .mat-select-arrow
-  color:  #419400
-
-::ng-deep .mat-select-value
-  color: black
-
-::ng-deep .mat-datepicker-toggle
-  color: black
+mat-icon
+  margin-right: 0.2rem
