--- a/src/app/components/signup-frame/signup-page/signup-page.component.sass
+++ b/src/app/components/signup-frame/signup-page/signup-page.component.sass
@@ -1,34 +1,14 @@
-/*.forms-body-container
-    margin-top: 15%
-    margin-right: 5%
-    margin-left: 5%
-    background: #D9D9D9*/
-
 .mat-stepper
     margin: 0,0,0,0
     background: white
 
-.next-button
+.bb-next-button
+    width: 90%
+    height: 3rem
+
     margin-right: 5%
     margin-left: 5%
+    margin-top: 5%
 
-button
-    width: 100%
-    background: #419400
-
-::ng-deep .mat-step-header .mat-step-icon-selected
-    background-color: #419400
-
-::ng-deep .mat-horizontal-content-container
-    background-color: white
-
-/*::ng-deep .mat-horizontal-stepper-header-container
-    background-color: white*/
-
-
-::ng-deep .mat-step-text-label
-    color: black
-
-/*::ng-deep .mat-stepper-horizontal-line
-    background-color: black*/
-
+    font-family: 'Montserrat'
+    font-size: 1.2rem
