--- a/src/app/components/signup-frame/signup-forms/signup-forms.component.html
+++ b/src/app/components/signup-frame/signup-forms/signup-forms.component.html
@@ -4,60 +4,53 @@
         <mat-icon matPrefix>person</mat-icon>
         <mat-label>Name</mat-label>
         <input matInput placeholder="Name" [formControl]="signUpForm.controls.name">
-        <mat-error *ngIf="signUpForm.controls.name.invalid">{{errorMessage()}}</mat-error>
+        <mat-error>Please enter your full name</mat-error>
     </mat-form-field>
 
     <!--Username-->
     <mat-form-field appearance="outline">
-        <mat-icon matPrefix>user</mat-icon>
-        <mat-label>Username</mat-label>
+      <mat-icon matPrefix>alternate_email</mat-icon>
+      <mat-label>Username</mat-label>
         <input matInput placeholder="Username" [formControl]="signUpForm.controls.username">
-        <mat-error *ngIf="signUpForm.controls.username.invalid">Username must be between 3 and 10 characters</mat-error>
+        <mat-error>Username must be between 3 and 10 characters</mat-error>
     </mat-form-field>
 
     <!--Password-->
     <mat-form-field appearance="outline">
-        <mat-icon matPrefix>lock</mat-icon>
+        <mat-icon matPrefix >lock</mat-icon>
         <mat-label>Password</mat-label>
-        <input matInput [type]="hide ? 'password' : 'text'" [formControl]="signUpForm.controls.password">
-        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-          <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        <input matInput
+          [type]="passwordInputType"
+          [formControl]="signUpForm.controls.password">
+        <button type="button" mat-icon-button matSuffix (click)="togglePasswordVisibility()">
+          <mat-icon color="{{passwordIconColor}}">{{passwordIconName}}</mat-icon>
         </button>
-        <mat-error *ngIf="signUpForm.controls.password.invalid">Invalid password</mat-error>
+        <mat-error>Please enter a valid alfanumeric password</mat-error>
     </mat-form-field>
 
     <!--Age and gender-->
-    <div class="two-col">
-        <div class="left">
-            <!--
-            <mat-form-field appearance="outline">
-                <mat-label>Age</mat-label>
-                <input type = "date" matInput  placeholder="Age" [formControl]="signUpForm.controls.birthdate" >
-                <mat-icon matPrefix>event</mat-icon>
-                <mat-error *ngIf="signUpForm.controls.birthdate.invalid">{{errorMessage()}}</mat-error>
-            </mat-form-field>
-            -->
+    <div class="row">
+
+        <div class="col-7">
             <mat-form-field appearance="outline">
                 <mat-label>Birthdate</mat-label>
-                <input matInput [matDatepicker]="picker" type="date" [formControl]="signUpForm.controls.birthdate">
-                <mat-datepicker-toggle matPrefix [for]="picker">calendar</mat-datepicker-toggle>
+                <input matInput
+                  [matDatepicker]="picker"
+                  [formControl]="signUpForm.controls.birthdate">
+                <mat-datepicker-toggle matSuffix
+                  [for]="picker">calendar</mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
-                <mat-error *ngIf="signUpForm.controls.birthdate.invalid">{{errorMessage()}}</mat-error>
+                <mat-error>Please enter a valid date</mat-error>
             </mat-form-field>
         </div>
-        <div class="right">
-        <!--
-        <mat-form-field appearance="outline">
-            <mat-label>Gender</mat-label>
-            <input matInput placeholder="Gender" [formControl]="signUpForm.controls.gender">
-            <mat-error *ngIf="signUpForm.controls.gender.invalid">{{errorMessage()}}</mat-error>
-        </mat-form-field>
-        -->
+
+        <div class="col-5">
         <mat-form-field appearance="outline">
             <mat-label>Gender</mat-label>
             <mat-select [formControl]="signUpForm.controls.gender">
-                <mat-option value="Woman">Woman</mat-option>
-                <mat-option value="Man">Man</mat-option>
+              <!-- TODO: Retrieve from service -->
+                <mat-option value="Male">Male</mat-option>
+                <mat-option value="Female">Female</mat-option>
                 <mat-option value="Non-binary">Non-binary</mat-option>
             </mat-select>
         </mat-form-field>
@@ -67,9 +60,9 @@
     <!--Phone-->
     <mat-form-field appearance="outline">
         <mat-label>Phone</mat-label>
-        <input tpye="tel" matInput placeholder="Phone" [formControl]="signUpForm.controls.phone">
+        <input type="tel" matInput placeholder="Phone" [formControl]="signUpForm.controls.phone">
         <mat-icon matPrefix>phone</mat-icon>
-        <mat-error *ngIf="signUpForm.controls.phone.invalid">Invalid phone</mat-error>
+        <mat-error>Please enter a valid phone number</mat-error>
     </mat-form-field>
 
     <!--Email-->
@@ -77,7 +70,7 @@
         <mat-label>Email</mat-label>
         <input type="email" matInput placeholder="Email" [formControl]="signUpForm.controls.email">
         <mat-icon matPrefix>mail</mat-icon>
-        <mat-error *ngIf="signUpForm.controls.email.invalid">Invalid email</mat-error>
+        <mat-error>Please enter a valid email</mat-error>
     </mat-form-field>
 
 </form>
