--- a/src/app/components/signup-frame/validation-from/validation-from.component.sass
+++ b/src/app/components/signup-frame/validation-from/validation-from.component.sass
@@ -1,16 +1,21 @@
-.text
-    text-align: center
-
-.validation-section
+.bb-validation-section
     border: solid
     border-color: black
     padding: 30%
 
-#select-label
-    font-size: 32px
-    text-align: center
-    display: block
-    width: 100%
-    text-align: center
+.bb-upload-icon
+  display: block
+  margin: auto
 
+  font-size: 4rem
 
+  min-height: 10rem
+  width: fit-content
+
+@media ( max-width: 700px )
+  .bb-upload-icon
+      max-height: 100%
+
+@media ( min-width: 700px )
+  .bb-upload-icon
+      max-height: 10rem
