added responsiveness to login

--- a/src/app/components/init-page/login-form/login-form.component.html
+++ b/src/app/components/init-page/login-form/login-form.component.html
@@ -46,6 +46,9 @@
           >Forgot password?
           </a>
         </p>
+        <p class="bb-singup-text">
+          Don't have an account? <a routerLink="/signup">Create one</a>
+        </p>
       </div>
     </div>
 
