--- a/src/app/components/init-page/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/init-page/reset-password-form/reset-password-form.component.html
@@ -43,5 +43,14 @@
       >RESET PASSWORD</button>
     </div>
   </div>
+  <div class="bb-flex-center bb-submit-button-margin">
+    <div class="bb-w-100">
+      <a routerLink="/init/login">
+        <button mat-raised-button
+          class="bb-btn bb-text-green bb-init-submit-button"
+        >CANCEL</button>
+      </a>
+    </div>
+  </div>
 
 </form>
