--- a/src/app/components/signup-frame/validation-from/validation-from.component.html
+++ b/src/app/components/signup-frame/validation-from/validation-from.component.html
@@ -1,7 +1,7 @@
 <h3>In order to protect you and other <b>Bondi-Bonding</b> users, we need to verify your identity.
   Please upload a clear picture of your ID.</h3>
 
-<label class="w-100" for="idInput">
+<label class="bb-upload d-block mx-auto" for="idInput">
   <div class="bb-validation-section">
     <mat-icon class="bb-upload-icon">add_a_photo</mat-icon>
   </div>
