--- a/src/app/components/signup-frame/validation-from/validation-from.component.sass
+++ b/src/app/components/signup-frame/validation-from/validation-from.component.sass
@@ -9,13 +9,16 @@
 
   font-size: 4rem
 
-  min-height: 10rem
+  height: 100%
   width: fit-content
 
 @media ( max-width: 700px )
-  .bb-upload-icon
-      max-height: 100%
+  .bb-upload
+      height: auto
+      width: 100%
 
 @media ( min-width: 700px )
-  .bb-upload-icon
-      max-height: 10rem
+  .bb-upload
+      height: auto
+      width: 70%
+
