--- a/src/app/components/signup-frame/signup-page/signup-page.component.sass
+++ b/src/app/components/signup-frame/signup-page/signup-page.component.sass
@@ -12,3 +12,23 @@
 
     font-family: 'Montserrat'
     font-size: 1.2rem
+
+.bb-signup-title
+    text-align: center
+    font-size: 1.2rem
+    font-family: 'Montserrat'
+
+    margin: 0.7rem 0 0 0
+
+.bb-signup-subtitle
+    text-align: center
+
+
+@media (max-width: 700px)
+  .bb-signup-title
+    margin: 0.7rem 0 0 0
+
+@media (min-width: 700px)
+  .bb-signup-title
+    margin-top: 1.5rem
+    margin-bottom: 1.5rem
