--- a/src/app/components/init-page/init-home/init-home.component.html
+++ b/src/app/components/init-page/init-home/init-home.component.html
@@ -4,7 +4,7 @@
   </p>
   <a routerLink="/init/login">
       <button mat-raised-button class="bb-btn bb-login-btn" color="primary">
-        Log in
+        LOG IN
       </button>
   </a>
 
@@ -17,9 +17,8 @@
 
 <footer class="bb-faq-footer">
   <a class="bb-link-text" routerLink="/faq">
-    <div class="bb-faq-text">
-      FAQs
-    </div>
-    <mat-icon class="bb-faq-icon" color="primary">expand_more</mat-icon>
+    <mat-icon class="bb-faq-icon" color="primary">
+      help
+    </mat-icon>
   </a>
 </footer>
