--- a/src/styles.sass
+++ b/src/styles.sass
@@ -62,6 +62,9 @@ $bb-primary-dark-green: #357a00
   &.bb-hide-home-btn
     transform: translateX(200%)
 
+  &:hover
+    filter: brightness(90%)
+
 .bb-home-btn-icon
   width: 2rem
   height: 2rem
