--- a/src/app/components/faq-page/faq-accordion/faq-accordion.component.html
+++ b/src/app/components/faq-page/faq-accordion/faq-accordion.component.html
@@ -1,14 +1,15 @@
-<mat-accordion >
-    <mat-expansion-panel (opened)="panelOpenState = true"
-                         (closed)="panelOpenState = false" *ngFor="let faq of Faqs">
-        <mat-expansion-panel-header>
-            <mat-panel-title class="bb-title">
-                {{faq.question}}
-            </mat-panel-title>
-            <mat-panel-description>
-                {{faq.hint}}
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <p>{{faq.answer}}</p>
-    </mat-expansion-panel>
+<mat-accordion>
+  <mat-expansion-panel (opened)="setPanelState(true)"
+                       (closed)="setPanelState(false)"
+                       *ngFor="let faq of faqs">
+      <mat-expansion-panel-header>
+          <mat-panel-title class="bb-title">
+              {{faq.question}}
+          </mat-panel-title>
+          <mat-panel-description>
+              {{faq.hint}}
+          </mat-panel-description>
+      </mat-expansion-panel-header>
+      <p>{{faq.answer}}</p>
+  </mat-expansion-panel>
 </mat-accordion>
