--- a/src/app/components/faq-page/faq-page/faq-page.component.html
+++ b/src/app/components/faq-page/faq-page/faq-page.component.html
@@ -1,19 +1,21 @@
-<header class="bb-faq-header">
-        <div class="bb-title">
-            FAQs
-        </div>
-</header>
+<div class="container">
 
-<section class="bb-faq-section">
-    <app-faq-accordion></app-faq-accordion>
-</section>
+  <div class="bb-faq-header d-flex w-100 mt-2">
+    <h2 class="bb-title m-auto">FAQs</h2>
+  </div>
 
-<div class="bb-button">
+  <div class="bb-back-button">
     <a routerLink="/init">
-        <button mat-fab color="primary">
-            <mat-icon>arrow_back</mat-icon>
+        <button mat-fab color="basic">
+            <mat-icon color="primary">arrow_back</mat-icon>
         </button>
     </a>
+  </div>
+
+  <section class="bb-faq-section">
+      <app-faq-accordion></app-faq-accordion>
+  </section>
+
 </div>
 
 <footer class="bb-footer">
