--- a/src/app/components/faq-page/faq-page/faq-page.component.sass
+++ b/src/app/components/faq-page/faq-page/faq-page.component.sass
@@ -1,39 +1,27 @@
-.bb-faq-header
-    width: 90%
-    padding: 5%
-    position: sticky
-    top: 0
-    left: 0
-    z-index: 9999
-
-.bb-faq-icon
-    text-align : center
-    font-size: 3rem
-    width: 100%
-    height: 100%
-
 .bb-faq-section
     margin-top: 5%
     margin-bottom: 5%
-    //background-color: #D9D9D9
-    //opacity: .3
+
+.bb-faq-header
+    height: 4.5rem
+    align-items: center
 
 .bb-title
     text-align: center
-    color : #419400
+    color: #419400
     font-family: 'DM Sans'
     font-weight: bold
-    font-size: 500%
+    font-size: 4rem
 
 .bb-footer
     display: flex
     justify-content: center
     width: 100%
 
+.bb-back-button
+    position: absolute
+    top: 1.2rem
+
 .bb-footer > span
     color : #419400
     font-family: 'DM Sans'
-
-.bb-button
-    display: flex
-    justify-content: end
