--- a/src/app/components/general/search/search-button/search-button.component.html
+++ b/src/app/components/general/search/search-button/search-button.component.html
@@ -1,6 +1,6 @@
 <button
   mat-fab
-  class="bb-btn bb-home-btn {{hideAnimationSelector}}"
+  class="bb-home-btn {{hideAnimationSelector}}"
   color="primary">
   <mat-icon
     class="bb-home-btn-icon">
