--- a/src/app/components/init-page/init-home/init-home.component.sass
+++ b/src/app/components/init-page/init-home/init-home.component.sass
@@ -23,15 +23,14 @@
   width: 100%
 
   position: absolute
-  bottom: 0
+  bottom: 1.5rem
   left: 0
 
   font-family: 'DM Sans'
-  font-size: 1rem
+  font-size: 1.5rem
   text-align: center
 
 .bb-faq-icon
-  font-size: 3rem
-
+  font-size: 2.5rem
   width: 100%
   height: 100%
